# Changelog

## Version 5.5.0

* Adding decoder option for NVEncC and QSVEncC
* Adding #329 Hardware VAAPI encoding support for HEVC and H264
* Adding #351 Option to disable automatic tab switching (thanks to Wontell)

## Version 5.4.1

* Fixing #460 QSVEncC not listed as encoder with FastFlix 5.4.0 (thanks to zedfreak)
* Fixing #451 x265 presets and tunes not being applied properly (thanks to HannesJo0139)
* Fixing #442 improper options passed to rigaya's encoders for non libavformat readers (thanks to Joet73)
* Fixing poetry issues by using setuptools instead

## Version 5.4.0

* Adding #389 unlock GPU encoders by checking for supported codec (thanks to F.O.R.A.R.T.)
* Adding #430 Minimise to tray (thanks to ProFire)
* Adding #452 way to unselect all audio in a profile (thanks to HannesJo0139)
* Changing rigaya encoders end time would use --trim instead of --seekto
* Changing #450 -vsync to -fps_mode as -vsync is deprecated (thanks to GT500org)
* Fixing #441 outdated SVT-AV1 Encoding Guide link (thanks to Yuzbashi)
* Fixing #455 source FPS was not applied to rigaya encoders (thanks to F.O.R.A.R.T.)
* Removing Windows toast notification due to prone to errors and incompatibility with tray minimize

## Version 5.3.0

* Adding profile select in Load Directory window
* Adding `avis` and `avifs` extensions for AV1 (thanks to u/zimmwisdom)
* Fixing #439 QSVEnc QP mode select did not work in AVC / HEVC (thanks to sun6560032)
* Fixing current profile window would not show

## Version 5.2.3

* Fixing #433 queue_extras emptied on loading queue (thanks to Maddie Davis)

## Version 5.2.2

* Fixing #431 Missing ubuntu 20 builds (thanks to techore)
* Fixing file extension drop down would not always set correct on encoder change (thanks to GT500org)
* Fixing missing translations for VVC
* Fixing VVC was adding extra params it did not support
* Fixing trying to restore a video from the queue that was using an encoder that no longer exists

## Version 5.2.1
