@@ -4,7 +4,7 @@ import logging
 from box import Box
 from PySide6 import QtCore, QtWidgets, QtGui
 
-from fastflix.encoders.common.setting_panel import RigayaPanel
+from fastflix.encoders.common.setting_panel import QSVEncPanel
 from fastflix.language import t
 from fastflix.models.encode import QSVEncCAV1Settings
 from fastflix.models.fastflix_app import FastFlixApp
@@ -65,7 +65,7 @@ def get_breaker():
     return breaker_line
 
 
-class QSVAV1Enc(RigayaPanel):
+class QSVAV1Enc(QSVEncPanel):
     profile_name = "qsvencc_av1"
     hdr10plus_signal = QtCore.Signal(str)
     hdr10plus_ffmpeg_signal = QtCore.Signal(str)
@@ -88,6 +88,9 @@ class QSVAV1Enc(RigayaPanel):
         grid.addLayout(self.init_preset(), 0, 0, 1, 2)
         grid.addLayout(self.init_lookahead(), 1, 0, 1, 2)
         grid.addLayout(self.init_qp_mode(), 2, 0, 1, 2)
+        grid.addLayout(self.init_adapt_ref(), 5, 0, 1, 2)
+        grid.addLayout(self.init_adapt_ltr(), 6, 0, 1, 2)
+        grid.addLayout(self.init_adapt_cqm(), 7, 0, 1, 2)
 
         breaker = QtWidgets.QHBoxLayout()
         breaker_label = QtWidgets.QLabel(t("Advanced"))
@@ -120,12 +123,20 @@ class QSVAV1Enc(RigayaPanel):
         advanced.addLayout(self.init_metrics())
         grid.addLayout(advanced, 6, 2, 1, 4)
 
+        # adapt_line = QtWidgets.QHBoxLayout()
+        # adapt_line.addLayout(self.init_adapt_ref())
+        # adapt_line.addStretch(1)
+        # adapt_line.addLayout(self.init_adapt_ltr())
+        # adapt_line.addStretch(1)
+        # adapt_line.addLayout(self.init_adapt_cqm())
+        # grid.addLayout(adapt_line, 7, 2, 1, 4)
+        #
         grid.addLayout(self.init_dhdr10_info(), 7, 2, 1, 4)
 
         self.ffmpeg_level = QtWidgets.QLabel()
         grid.addWidget(self.ffmpeg_level, 8, 2, 1, 4)
 
-        grid.setRowStretch(9, 1)
+        grid.setRowStretch(10, 1)
 
         guide_label = QtWidgets.QLabel(
             link(
@@ -350,6 +361,9 @@ class QSVAV1Enc(RigayaPanel):
             ref=self.widgets.ref.currentText() if self.widgets.ref.currentIndex() != 0 else None,
             qp_mode=self.widgets.qp_mode.currentText(),
             decoder=self.widgets.decoder.currentText(),
+            adapt_ltr=self.widgets.adapt_ltr.isChecked(),
+            adapt_cqm=self.widgets.adapt_cqm.isChecked(),
+            adapt_ref=self.widgets.adapt_ref.isChecked(),
         )
 
         encode_type, q_value = self.get_mode_settings()
