@@ -120,6 +120,9 @@ def build(fastflix: FastFlix):
         ("--vpp-yadif" if video.video_settings.deinterlace else ""),
         (f"--vpp-colorspace hdr2sdr=mobius" if video.video_settings.remove_hdr else ""),
         remove_hdr,
+        ("--adapt-ref" if settings.adapt_ref else ""),
+        ("--adapt-ltr" if settings.adapt_ltr else ""),
+        ("--adapt-cqm" if settings.adapt_cqm else ""),
         "--psnr --ssim" if settings.metrics else "",
         build_audio(video.video_settings.audio_tracks, video.streams.audio),
         build_subtitle(video.video_settings.subtitle_tracks, video.streams.subtitle, video_height=video.height),
